--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
+    "recharts": "^2.1.14"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
