--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@icon-park/react": "^1.4.2",
+    "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "next-sanity": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-reveal": "^1.2.2",
