--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.3",
     "react-reveal": "^1.2.2",
     "recharts": "^2.1.14"
   },
