--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@icon-park/react": "^1.4.2",
+    "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
