--- a/tee-sanity/package.json
+++ b/tee-sanity/package.json
@@ -15,7 +15,11 @@
     "sanity"
   ],
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@react-icons/all-files": "^4.1.0",
     "@sanity/vision": "^3.0.0",
+    "emailjs-com": "^3.2.0",
+    "feather-icons": "^4.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
